--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,10 @@
 **/Searches/
 **/Tracing/
 **/Videos/
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
